websocket implemented and email style enhancment plus reset password logic remade